--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,8 +22,10 @@ spring:
     password: 123456
 
 mybatis:
-#  config-location: classpath:mybatis-config.xml # 配置 MyBatis 配置文件路径
+  #  config-location: classpath:mybatis-config.xml # 配置 MyBatis 配置文件路径
   mapper-locations: classpath:mapper/*.xml # 配置 Mapper XML 地址
   type-aliases-package: cn.sucrelt.sucreblog.entity # 配置数据库实体包路径
   configuration:
     map-underscore-to-camel-case: true
+    # spring boot集成mybatis的方式打印sql
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
